tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/eu-central-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-87911ee4",
                    "NetworkAclId": "acl-a73675cd",
                    "SubnetId": "subnet-5d578f11"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-85911ee6",
                    "NetworkAclId": "acl-a73675cd",
                    "SubnetId": "subnet-f323f68f"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-86911ee5",
                    "NetworkAclId": "acl-a73675cd",
                    "SubnetId": "subnet-4c49d726"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-a73675cd",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-44f4422e"
        }
    ]
}
