tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/eu-central-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-eb9d1b80",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-a8cd7bc2",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "111111111111",
            "State": "available",
            "VpcId": "vpc-44f4422e"
        }
    ]
}
